# tree-md

./: .gitignore  README.md  pyproject.toml
API/: example_best_practice.md
Curl/: example_CURL_requests.md
Nginx/: base.md  http2.md  logs.md  nginx для статики с разделением прав доступа.md  setbot.md  балансировщик.md
OC-memory-space-core-spaces/: OC.md  program_process_thread.md
SQL/: Виды БД.md  порядок выполнение команд запроса.md  порядок выполнение.md
SQL/postgres/: psql.md
Ubuntu/: alias for git.md  base_command.md  chmod.md  chown.md  fish_terminal.md  nano_upgrade.md  ss tool.md  Порты, и действия с ними.md  журналы и чистка.md
VIM/: base.md
VMbox/: добавить памяти к виртуалке.md
VsCode/: SShRemote.md
YAML/: base.md
android_docker/: install_docker_on_android.md
architecture/: АнонимныйБот.excalidraw.md
bash_sripts/: BASH_SRIPT_example.md  dump.sh  practice_bash_sript_create_dump.md  static_archive.sh
cryptography/excalidraw files/: JWT.excalidraw.md  (+4 more)
docker/: base_commands.md  docker_example_description.md  dump.md  job_in_container_on_posgres.md  job_in_container_on_postgres.md
git/: base.md  conflict_main_vs_master.md  невозможность залить ветку, потому что там новые изменения.md
golang/: Go GTMX.canvas  base зависимости и модули.md  base пакеты, файлы и импорты.md  base.md  go base.md  компиляция.md
openvpn/: start.md
postgres/: порядок выполнение операторов.md
pytest/: debug tests.md
rust/: starts_and_eco.md  зависимости.md  модули в rust.md
web/: http protocol.md  step by step request in API back & front.md
(+114 files in other folders)
